<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/register_layout"
    android:background="@drawable/wallpaper"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/register_card"
        android:layout_marginTop="60dp"
        app:cardElevation="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingBottom="20dp">

            <ImageView
                android:layout_marginTop="30dp"
                android:id="@+id/login_title"
                android:layout_width="250dp"
                android:scaleType="fitStart"
                android:layout_height="50dp"
                android:src="@drawable/app_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/name_icon"
                android:src="@drawable/ic_face_black_24dp"
                app:layout_constraintTop_toTopOf="@id/register_fullname_text_input_layout"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_fullname_text_input_layout"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                app:layout_constraintStart_toEndOf="@id/name_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fullname_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fullname"/>


            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/mail_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mail_black_24dp"
                app:layout_constraintTop_toTopOf="@id/register_email_text_input_layout"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_email_text_input_layout"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_fullname_text_input_layout"
                android:layout_width="0dp"
                app:layout_constraintStart_toEndOf="@id/mail_icon"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_email_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"/>


            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/lock_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_lock_black_24dp"
                app:layout_constraintTop_toTopOf="@id/register_confirm_password_text_input_layout"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="10dp"/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_confirm_password_text_input_layout"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                app:layout_constraintStart_toEndOf="@id/lock_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_password_text_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:counterEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_confirm_password_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/confirm_password"/>


            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/lock_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="10dp"
                app:layout_constraintTop_toTopOf="@id/register_password_text_input_layout"
                android:src="@drawable/ic_lock_black_24dp"/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_password_text_input_layout"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_email_text_input_layout"
                android:layout_width="0dp"
                app:layout_constraintStart_toEndOf="@id/lock_1"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:counterEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"/>


            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:onClick="registerButton"
        android:id="@+id/register_material_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/register"
        app:cornerRadius="10dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        app:rippleColor="@color/colorButtonRipple"
        app:layout_constraintTop_toBottomOf="@id/register_card"
        android:layout_marginTop="20dp"
        />



    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="#959595"
            style="@style/TextAppearance.AppCompat.Medium"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_login_material_button"
            android:layout_width="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>