<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/login_layout"
    android:background="@drawable/wallpaper"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/login_card_view"
        android:layout_marginTop="120dp"
        app:cardElevation="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingBottom="20dp">

            <ImageView
                android:layout_marginTop="30dp"
                android:id="@+id/login_title"
                android:layout_width="250dp"
                android:scaleType="fitStart"
                android:layout_height="50dp"
                android:src="@drawable/app_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/mail_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_mail_black_24dp"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toTopOf="@id/login_email_text_input_layout"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="10dp"/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_email_text_input_layout"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="10dp"
                app:layout_constraintStart_toEndOf="@id/mail_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_email_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"/>


            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/lock_icon"
                android:layout_width="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_lock_black_24dp"
                app:layout_constraintTop_toTopOf="@id/login_password_text_input_layout"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="10dp"/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password_text_input_layout"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                app:layout_constraintStart_toEndOf="@id/lock_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_email_text_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:counterEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"/>


            </com.google.android.material.textfield.TextInputLayout>






        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:onClick="loginButton"
        android:id="@+id/login_material_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/login"
        app:cornerRadius="10dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        app:rippleColor="@color/colorButtonRipple"
        app:layout_constraintTop_toBottomOf="@id/login_card_view"
        android:layout_marginTop="20dp"
        />


    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/need_an_account"
            android:textColor="#959595"
            style="@style/TextAppearance.AppCompat.Medium"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_register_material_button"
            android:layout_width="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>